--- a/frontend/src/app/sequence/sequence.component.html
+++ b/frontend/src/app/sequence/sequence.component.html
@@ -1,6 +1,7 @@
 <main>
     <h1>Sequence</h1>
 
+    <!-- just one box to track here -->
     <section>
        <div [@boxTrack]="direction">&#64;</div>
     </section>
