--- a/frontend/src/app/sequence/sequence.component.css
+++ b/frontend/src/app/sequence/sequence.component.css
@@ -40,3 +40,8 @@ aside div button {
     cursor: pointer;
     color: #1976d2;
 }
+
+aside div button:disabled {
+    color: lightgray;
+    cursor: default;
+}
